objects/SVMXC__Timesheet__c.object
<CustomObject>
    <fields>
        <fullName>SMAX_PS_Sum_of_Duration__c</fullName>
        <label>Sum of Duration</label>
        <summarizedField>SVMXC__Timesheet_Entry__c.SVMXC__Duration__c</summarizedField>
        <summaryForeignKey>SVMXC__Timesheet_Entry__c.SVMXC__Timesheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_TS_Group_Member__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Technician/Equipment</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipLabel>Timesheets</relationshipLabel>
        <relationshipName>Timesheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_TS_Is_Overlapping_Timesheet__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field describes if the timesheet is overlapping or not</description>
        <inlineHelpText>This field describes if the timesheet is overlapping or not</inlineHelpText>
        <label>Is Overlapping Timesheet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Total_Non_Productive_Hours__c</fullName>
        <formula>SVMXC__Total_Hours__c -  SVMX_PS_Total_Productive_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Non Productive Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Total_Productive_Hours__c</fullName>
        <formula>SVMX_PS_Total_Productive_Minutes__c / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Productive Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Total_Productive_Minutes__c</fullName>
        <inlineHelpText>Sum of duration from productive Time Entries</inlineHelpText>
        <label>Total Productive Minutes</label>
        <summarizedField>SVMXC__Timesheet_Entry__c.SVMXC__Duration__c</summarizedField>
        <summaryFilterItems>
            <field>SVMXC__Timesheet_Entry__c.SVMX_PS_Productive_Time__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>SVMXC__Timesheet_Entry__c.SVMXC__Timesheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Utilization__c</fullName>
        <formula>SVMX_PS_Total_Productive_Hours__c / 40</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utilization</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>